# stormatter

./: README.md  main.py  pyproject.toml
src/stormatter/: __init__.py  formatter.py  lexer.py
src/stormatter/cli/: __init__.py  format.py  paths.py
src/stormatter/formatting/: __init__.py  formatter.py
src/stormatter/parsing/: __init__.py  lexer.py  parser.py  token.py  token_stream.py
src/stormatter/study_manager/: __init__.py  manager.py  paths_parser.py
src/stormatter/utils/: __init__.py  cache.py
tests/: test_formatter.py  test_lexer.py  test_manager.py  test_parser.py  test_paths.py
