[project]
name = "stormatter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
stormatter = "stormatter.cli.format:patched_main"
stormatter-paths = "stormatter.cli.paths:main"

[tool.setuptools.package-data]
stormatter = ["py.typed"]
